--- a/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.css
+++ b/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.css
@@ -27,3 +27,8 @@
 .example-full-width {
   width: 100%;
 }
+
+::ng-deep .mat-expansion-panel-header[aria-disabled=true] {
+  color: rgba(0,0,0,.87);
+}
+
