--- a/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.html
+++ b/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.html
@@ -2,30 +2,111 @@
 
 <div class="lead"><b>Clone Results</b></div>
 
-<ul>
-  <li *ngFor="let result of cloneResults.results">
-    {{ result.toString() }}
-  </li>
-</ul>
-
 <div *ngIf="cloneResults.referenceCode.type==inputType.SNIPPET">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <p class="lead">Input code</p>
-        <pre><code class="code" [highlight]="cloneResults.inputCode.contents" [lineNumbers]="true" ></code></pre>
+  <table mat-table [dataSource]="cloneResults.results" class="mat-elevation-z2">
+    <!-- cloneType Column -->
+    <ng-container matColumnDef="cloneType" class="make-gold">
+      <th mat-header-cell *matHeaderCellDef> Clone Type</th>
+      <td mat-cell *matCellDef="let element"> {{element.cloneType}} </td>
+    </ng-container>
+
+    <!-- inputLocation Column -->
+    <ng-container matColumnDef="inputLocation">
+      <th mat-header-cell *matHeaderCellDef> Input Code Location Lines</th>
+      <td mat-cell
+          *matCellDef="let element"> {{"Start: " + element.inputLocation[0] + ", End: " + element.inputLocation[1]}} </td>
+    </ng-container>
+
+    <!-- referenceLocation Column -->
+    <ng-container matColumnDef="referenceLocation">
+      <th mat-header-cell *matHeaderCellDef> Reference Code Location Lines</th>
+      <td mat-cell
+          *matCellDef="let element"> {{"Start: " + element.referenceLocation[0] + ", End: " + element.referenceLocation[1]}} </td>
+    </ng-container>
+
+    <!-- methodName Column -->
+    <ng-container matColumnDef="methodName">
+      <th mat-header-cell *matHeaderCellDef> Method Name</th>
+      <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
+    <tr mat-row
+        [ngClass]="{'make-green': row.cloneType == 4, 'make-blue': row.cloneType==3, 'make-gold': row.cloneType==2, 'make-red': row.cloneType==1}"
+        *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+</div>
+
+<div *ngIf="cloneResults.referenceCode.type==inputType.PROJECT">
+  <table mat-table [dataSource]="cloneResults.results" class="mat-elevation-z2">
+    <!-- cloneType Column -->
+    <ng-container matColumnDef="cloneType" class="make-gold">
+      <th mat-header-cell *matHeaderCellDef> Clone Type</th>
+      <td mat-cell *matCellDef="let element"> {{element.cloneType}} </td>
+    </ng-container>
+
+    <!-- inputLocation Column -->
+    <ng-container matColumnDef="inputLocation">
+      <th mat-header-cell *matHeaderCellDef> Input Code Location</th>
+      <td mat-cell
+          *matCellDef="let element"> {{"Start: " + element.inputLocation[0] + ", End: " + element.inputLocation[1]}} </td>
+    </ng-container>
+
+    <!-- referenceFileName Column -->
+    <ng-container matColumnDef="referenceFileName">
+      <th mat-header-cell *matHeaderCellDef> Reference Code File Name</th>
+      <td mat-cell *matCellDef="let element"> {{element.referenceFileName}} </td>
+    </ng-container>
+
+    <!-- referenceLocation Column -->
+    <ng-container matColumnDef="referenceLocation">
+      <th mat-header-cell *matHeaderCellDef> Reference Code Location Lines</th>
+      <td mat-cell
+          *matCellDef="let element"> {{"Start: " + element.referenceLocation[0] + ", End: " + element.referenceLocation[1]}} </td>
+    </ng-container>
+
+    <!-- methodName Column -->
+    <ng-container matColumnDef="methodName">
+      <th mat-header-cell *matHeaderCellDef> method Name</th>
+      <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="projectDisplayedColumns; sticky:true"></tr>
+    <tr mat-row
+        [ngClass]="{'make-green': row.cloneType == 4, 'make-blue': row.cloneType==3, 'make-gold': row.cloneType==2, 'make-red': row.cloneType==1}"
+        *matRowDef="let row; columns: projectDisplayedColumns;"></tr>
+  </table>
+</div>
+
+<div class="divider"></div>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <p class="lead">Input code</p>
+      <pre><code class="code" [highlight]="cloneResults.inputCode.contents" [lineNumbers]="true"></code></pre>
+    </div>
+    <div class="col-sm">
+      <p class="lead">Reference code</p>
+      <div *ngIf="cloneResults.referenceCode.type==inputType.SNIPPET">
+        <pre><code class="code" [highlight]="cloneResults.referenceCode.contents" [lineNumbers]="true"></code></pre>
       </div>
-      <div class="col-sm">
-        <p class="lead">Reference code</p>
-        <pre><code class="code" [highlight]="cloneResults.referenceCode.contents" [lineNumbers]="true" ></code></pre>
+      <div *ngIf="cloneResults.referenceCode.type==inputType.PROJECT">
+        <div style='min-height:500px'>
+          <mat-tab-group>
+            <mat-tab *ngFor="let snippet of cloneResults.referenceCode.contents" label="{{snippet.fileName}}">
+              <div class="divider"></div>
+              <pre><code class="code" [highlight]="snippet.contents" [lineNumbers]="true"></code></pre>
+            </mat-tab>
+          </mat-tab-group>
+        </div>
+
+
       </div>
     </div>
   </div>
-</div>
-
-
-<div *ngIf="cloneResults.referenceCode.type==inputType.PROJECT">
-  <p>this is where project results will go</p>
 </div>
 
 
