--- a/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.html
+++ b/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.html
@@ -4,22 +4,22 @@
 
 
 <div *ngIf="!isFeedbackUploaded">
-  <mat-accordion class="example-headers-align">
+  <mat-accordion class="example-headers-align" >
 
-    <mat-expansion-panel  *ngFor="let result of cloneResults.results; let i = index" [expanded]="step === i" (opened)="setStep(i)" >
+    <mat-expansion-panel *ngFor="let result of cloneResults.results; let i = index" [expanded]="step === i" (opened)="setStep(i)" [disabled]="true" >
       <mat-expansion-panel-header style="background: #d7d7d7">
         <mat-panel-title>
           {{"Clone type: " + result.cloneType}}
         </mat-panel-title>
         <mat-panel-description>
-          <b>Input Location: </b>{{result.inputLocation}}<b> Reference Location: </b>{{result.inputLocation}}<b> Method: </b>{{result.methodName}}
+          <b>Input Location: </b>{{result.inputLocation}}<b> Reference Location: </b>{{result.referenceLocation}}<b> Method: </b>{{result.methodName}}
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div class="divider"></div>
 
-      <label id="example-radio-group-label">Do you agree with the output of the clone algorithm?</label>
+      <label id="example-radio-group-label"><span style="color:red">*</span>Do you agree with the output of the clone algorithm?</label>
       <br>
-      <mat-radio-group [(ngModel)]="cloneResults.results[i].feedback.rating" aria-label="Select an option"
+      <mat-radio-group required [(ngModel)]="cloneResults.results[i].feedback.rating" aria-label="Select an option"
                        aria-labelledby="example-radio-group-label">
         <mat-radio-button value="5">Agree</mat-radio-button> <br>
         <mat-radio-button value="4">Slightly Agree</mat-radio-button> <br>
@@ -28,17 +28,19 @@
         <mat-radio-button value="1">Disagree</mat-radio-button>
       </mat-radio-group>
       <br>
+      <div class="alert alert-warning" *ngIf="!cloneResults.results[i].feedback.rating">Rating selection is required before continuing</div>
       <mat-form-field class="example-full-width">
         <mat-label>Leave some textual feedback (optional)</mat-label>
         <textarea [(ngModel)]="cloneResults.results[i].feedback.textFeedback" matInput placeholder="Ex. I agree/disagree with this output because..."></textarea>
       </mat-form-field>
 
-      <mat-action-row>
+      <mat-action-row *ngIf="cloneResults.results[i].feedback.rating">
         <button mat-button color="warn" [hidden]="step==0" (click)="prevStep()">Previous</button>
         <button mat-button color="primary" [hidden]="step==cloneResults.results.length-1" (click)="nextStep()">Next</button>
         <button mat-button color="primary" [hidden]="step!=cloneResults.results.length-1" (click)="uploadFeedback(); nextStep()">Submit</button>
 
       </mat-action-row>
+
     </mat-expansion-panel>
 
   </mat-accordion>
