added clickable button to clone results file names, and added message when no clones are detected

--- a/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.css
+++ b/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.css
@@ -35,3 +35,14 @@ table {
 .make-red{
   background-color: pink;
 }
+
+.click-me{
+  cursor: pointer;
+  /*border-color: #c9c9c9;*/
+  border: 1.5px solid #3b3b3b;
+  /*background-color: #e9e9e9;*/
+  /*opacity: 50%;*/
+  background-color: inherit;
+  border-radius: 5px;
+  padding: 5px;
+}
