--- a/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
+++ b/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
@@ -37,18 +37,18 @@
               <button type="button" class="btn btn-sm btn-primary" (click)="openFileSelector()">Browse Files</button>
             </ng-template>
           </ngx-file-drop>
-
+          
           <div class="divider"></div>
           <div *ngIf="filesUploaded">
             <strong>Uploaded Files:</strong>
             <div class="divider"></div>
-            <div class="upload-table table-responsive mat-elevation-z1">
+            <div class="upload-table table-responsive mat-elevation-z1" *ngIf="fileStrings.length>0">
               <table class="table table-fixed">
                 <tbody class="upload-name-style">
                 <tr *ngFor="let item of fileStrings; let i=index">
                   <td>{{ item.fileName }}</td>
                 </tr>
-                </tbody>
+                </tbody> 
               </table>
             </div>
           </div>
