delete files button

--- a/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
+++ b/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
@@ -52,6 +52,7 @@
               </table>
             </div>
           </div>
+          <button type ="submit" class="btn btn-dark" (click)="deleteAllFiles()">Delete Files</button>
 
 <!--          <div *ngIf="filesUploaded">-->
 <!--            <div class="example-container mat-elevation-z1">-->
@@ -112,5 +113,6 @@
 <div class="divider"></div>
 
 <button type="submit" class="btn btn-dark" (click)="goToResults()">Get Results</button>
+
 &nbsp;
 <!--<button class="btn btn-light" (click)="printFileList()">Print Files</button>-->
