--- a/code-clone/src/app/components/home/home.component.html
+++ b/code-clone/src/app/components/home/home.component.html
@@ -8,39 +8,41 @@
   <div class="container">
     <img style="width: 100px" src="../../assets/code-icon-color.png">
     <div style="height: 10px"></div>
-
     <h1 class="display-4">Welcome to Code Clone Detector!</h1>
     <p class="lead">This is a tool that helps you determine if two pieces of code are clones of each other.</p>
   </div>
 </div>
 <div style="text-align: center;">
   <a class="btn btn-lg btn-primary" href="/code-analysis">Get Started</a><br>
-
   <div style="height:30px"></div>
   <hr class="my-4">
   <p class="lead">Clone Types:</p>
   <div class="container">
     <div class="row">
-      <div class="col-sm"><span style="font-size: large" class="badge badge-pill badge-danger">Type 1</span>
-        <div class="divider"></div>
+      <div class="col-sm">
         <mat-card class="mat">
           <div class="example-ripple-container pad" matRipple>
             <mat-card-content>
+              <span style="font-size: large" class="badge badge-pill badge-danger">Type 1</span>
+              <div class="divider"></div>
               <p>
-                Identical code fragments except for variations in whitespace (may also be variations in layout) and comments.
+                Identical code fragments except for variations in whitespace (may also be variations in layout) and
+                comments.
               </p>
             </mat-card-content>
           </div>
         </mat-card>
         <div class="divider"></div>
       </div>
-      <div class="col-sm"><span style="font-size: large" class="badge badge-pill badge-warning">Type 2</span>
-        <div class="divider"></div>
+      <div class="col-sm">
         <mat-card class="mat">
           <div class="example-ripple-container pad" matRipple>
             <mat-card-content>
+              <span style="font-size: large" class="badge badge-pill badge-warning">Type 2</span>
+              <div class="divider"></div>
               <p>
-                Structurally/syntactically identical fragments except for variations in identifiers, literals, types, layout and comments.
+                Structurally/syntactically identical fragments except for variations in identifiers, literals, types,
+                layout and comments.
               </p>
             </mat-card-content>
           </div>
@@ -49,26 +51,30 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm"><span style="font-size: large" class="badge badge-pill badge-primary">Type 3</span>
-        <div class="divider"></div>
+      <div class="col-sm">
         <mat-card class="mat">
           <div class="example-ripple-container pad" matRipple>
             <mat-card-content>
+              <span style="font-size: large" class="badge badge-pill badge-primary">Type 3</span>
+              <div class="divider"></div>
               <p>
-                Copied fragments with further modifications. Statements can be changed, added or removed in addition to variations in identifiers, literals, types, layout and comments.
+                Copied fragments with further modifications. Statements can be changed, added or removed in addition to
+                variations in identifiers, literals, types, layout and comments.
               </p>
             </mat-card-content>
           </div>
         </mat-card>
         <div class="divider"></div>
       </div>
-      <div class="col-sm"><span style="font-size: large" class="badge badge-pill badge-success">Type 4</span>
-        <div class="divider"></div>
+      <div class="col-sm">
         <mat-card class="mat">
           <div class="example-ripple-container pad" matRipple>
             <mat-card-content>
+              <span style="font-size: large" class="badge badge-pill badge-success">Type 4</span>
+              <div class="divider"></div>
               <p>
-                Two or more code fragments that perform the same computation but implemented through different syntactic variants.
+                Two or more code fragments that perform the same computation but implemented through different syntactic
+                variants.
               </p>
             </mat-card-content>
           </div>
@@ -77,7 +83,6 @@
       </div>
     </div>
   </div>
-
 </div>
 
 
