--- a/code-clone/src/app/components/view-feedback-data/view-feedback-data.component.css
+++ b/code-clone/src/app/components/view-feedback-data/view-feedback-data.component.css
@@ -16,3 +16,14 @@ table {
 .divider{
   height: 10px
 }
+
+.valid-input{
+  font-size: small;
+  color: green;
+}
+
+
+.invalid-input{
+  font-size: small;
+  color: red;
+}
