code analysis service is working for snippetsgit add -A

--- a/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.html
+++ b/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.html
@@ -25,11 +25,11 @@
             *matCellDef="let element"> {{"Start: " + element.referenceLocation[0] + ", End: " + element.referenceLocation[1]}} </td>
       </ng-container>
 
-      <!-- methodName Column -->
-      <ng-container matColumnDef="methodName">
-        <th mat-header-cell *matHeaderCellDef> Method Name</th>
-        <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>
-      </ng-container>
+<!--      &lt;!&ndash; methodName Column &ndash;&gt;-->
+<!--      <ng-container matColumnDef="methodName">-->
+<!--        <th mat-header-cell *matHeaderCellDef> Method Name</th>-->
+<!--        <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>-->
+<!--      </ng-container>-->
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
       <tr mat-row
@@ -68,11 +68,11 @@
             *matCellDef="let element"> {{"Start: " + element.referenceLocation[0] + ", End: " + element.referenceLocation[1]}} </td>
       </ng-container>
 
-      <!-- methodName Column -->
-      <ng-container matColumnDef="methodName">
-        <th mat-header-cell *matHeaderCellDef> method Name</th>
-        <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>
-      </ng-container>
+<!--      &lt;!&ndash; methodName Column &ndash;&gt;-->
+<!--      <ng-container matColumnDef="methodName">-->
+<!--        <th mat-header-cell *matHeaderCellDef> method Name</th>-->
+<!--        <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>-->
+<!--      </ng-container>-->
 
       <tr mat-header-row *matHeaderRowDef="projectDisplayedColumns; sticky:true"></tr>
       <tr mat-row
