uploading spinner bug fixed

--- a/code-clone/src/app/components/home/home.component.html
+++ b/code-clone/src/app/components/home/home.component.html
@@ -38,7 +38,7 @@
         <mat-card class="mat">
           <div class="example-ripple-container pad" matRipple>
             <mat-card-content>
-              <span style="font-size: large" class="badge badge-pill badge-warning">Type 2</span>
+              <span style="font-size: large; color: white" class="badge badge-pill badge-warning">Type 2</span>
               <div class="divider"></div>
               <p>
                 Structurally/syntactically identical fragments except for variations in identifiers, literals, types,
