--- a/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.css
+++ b/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.css
@@ -51,9 +51,15 @@ mat-icon {
 .overlay{
   height:100vh;
   width:100%;
-  background-color: rgba(225, 225, 225, 0.4);
+  background-color: rgba(239, 239, 239, 0.48);
   z-index:    10;
   top:        0;
   left:       0;
   position:   fixed;
 }
+
+.style-error {
+  background-color: indianred;
+}
+
+
