magic for the feedback

--- a/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.html
+++ b/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.html
@@ -118,7 +118,7 @@
           [matTooltipPosition]="position"
           (click)="goToFeedback()"
           aria-label="Button that displays a tooltip">
-    Submit Feedback
+    Give Feedback
   </button>
 </div>
 
